[tool.poetry]
name = "uvicorn-gunicorn-docker"
version = "0.1.0"
description = "Docker image with Uvicorn managed by Gunicorn for high-performance web applications in Python 3.10 with performance auto-tuning. Optionally with Alpine Linux."
license = "MIT"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
docker = "^5.0.3"
pytest = "^7.2.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.3.1"
mypy = "^0.931"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
